openshift/crunchydb/charts/prometheus/postgres-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-exporter-service
spec:
  selector:
    app.kubernetes.io/name: crunchy-postgres
    postgres-operator.crunchydata.com/instance-set: ha
  ports:
  - protocol: TCP
    port: 9187
    targetPort: 9187
